# catkin_ws

./: .gitignore  .ycm_extra_conf.py  README.md  sim.bag  subset.bag
src/Onboard-SDK-ROS/dji_sdk/launch/: sdk_manifold.launch
src/Onboard-SDK-ROS/dji_sdk/src/modules/: dji_sdk_node_main.cpp
src/aprilslam/: README.md
src/aprilslam/aprilslam/launch/: detector.launch  mapper.launch  slam.launch
src/apriltags_ros/apriltags_ros/launch/: example.launch
src/mav_comm/mav_msgs/include/mav_msgs/: conversions.h
src/mavros/libmavconn/include/mavconn/: mavlink_dialect.h
src/mavros/libmavconn/src/: mavlink_helpers.cpp
src/rotors_simulator/rotors_description/: package.xml
src/rotors_simulator/rotors_description/media/materials/scripts/: april_tag.material
src/rotors_simulator/rotors_description/urdf/: ardrone.xacro  ardrone2_base.xacro  ardrone3_base.xacro  ardrone_base.xacro  asymmetric_quadrotor_base.xacro  component_snippets.xacro
src/rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
src/rotors_simulator/rotors_gazebo/launch/: ardrone_ar_track.launch  cam.launch  mav_hovering_example.launch  mav_rate_example.launch  spawn_mav.launch  spawn_mav2.launch  spawn_mav3.launch  spawn_mav_rate.launch
src/rotors_simulator/rotors_gazebo/src/: fov.py  fov2.py  fov3.py  fov4.py  hovering_example.cpp  hovering_example2.cpp  hovering_example3.cpp
src/rotors_simulator/rotors_gazebo/worlds/: basic2.world  basic3
src/rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
src/rotors_simulator/src/: fov.py_pub.py  fov.py_sub.py
(+7 files in other folders)
